# XRP_Experiments

./: .gitignore  Makefile  README.md  pyproject.toml
data/processed/XRP/: X_test.csv  X_train.csv  X_val.csv  y_test.csv  y_train.csv  y_val.csv
docs/: mkdocs.yml
docs/docs/: index.md
notebooks/Shashikanth/: 36120-25SP-AT3-group_16-25218722.ipynb
